@@ -7,6 +7,7 @@ Fixed bugs
 ----------
 
 - fixed call of SCIPcreateConsBasicSOCNonlinear() with coefs being NULL, and fixed check for offsets being finite
+- avoid crash when initial IIS solve fails while reporting errors explicitly
 
 
 @section RN1000 SCIP 10.0.0
